# mss-metro-ai-api-service

./: .env.example  .env.local  .gitignore  ANALISE-ARQUITETURA-COMPLETA.md  DOCUMENTACAO-SWAGGER.md  IMPLEMENTATION-SUMMARY.md  IMPROVEMENTS.md  OPENSEARCH-DSL.md  OPTIMIZATION_README.md  ORM-SUMMARY.md  PYNAMODB-ORM.md  QUICKSTART.md  README.md  REFATORACAO-ROTAS.md  REFATORACAO-SERVICES.md  STATUS.md  VIRAG-BIM-README.md  VIRAG-IMPLEMENTATION.md  docker-compose.yml  pyproject.toml
app/: main.py
app/clients/: cloudwatch.py  opensearch.py  s3.py
app/core/: container.py  settings.py  validators.py
app/models/: dynamodb.py  opensearch.py
app/routes/: bim.py  health.py
app/routes/bim/: alerts.py  analysis.py  comparison.py  progress.py  projects.py
app/schemas/: bim.py
app/services/: batch_processing.py  bim_analysis.py  cache_service.py  comparison_service.py  contextual_prompt_builder.py  embedding_service.py  geometric_validator.py  hallucination_mitigation.py  ifc_processor.py  image_processing.py  progress_calculator.py  rag_search_service.py  vlm_service.py  vlm_structured_output.py
scripts/: README.md  download_model.py  explore_ifc.py  init_dynamodb_tables.py  init_opensearch_indices.py  quantize.py  reset_opensearch.py  test_rag.py  test_simple.py
